k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-springboot-6
  namespace: sandbox-test-springboot-6
  labels:
    app: test-springboot-6
    tenant: mastercard
spec:
  type: ClusterIP
  selector:
    app: test-springboot-6
  ports:
    - name: http
      port: 80
      targetPort: 8080
